# mongodb_module

./: README.md  pyproject.toml
mongodb_module/: beanie_client.py  beanie_client_decorator.py  beanie_control.py
mongodb_module/proto/: collection.proto  collection_pb2.py  collection_pb2_grpc.py
